Work on Gallagher models and env search fields